Modify Dockerfile and docker-compose.yml, then show hello world in localhost 5003

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,16 @@
-FROM ubuntu:latest
-LABEL authors="keita-katsumi"
+# backend/Dockerfile
+FROM python:3.10-slim
 
-ENTRYPOINT ["top", "-b"]
+WORKDIR /app
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Add Flask CLI to PATH (optional if using python -m flask)
+ENV PATH="/root/.local/bin:$PATH"
+
+COPY . .
+
+EXPOSE 5000
+
+CMD ["python", "-m", "flask", "run", "--host=0.0.0.0", "--port=5000"]
