--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   backend:
     build: ./backend
@@ -8,4 +6,7 @@ services:
     volumes:
       - ./backend:/app
     environment:
-      - FLASK_ENV=development
+      - FLASK_APP=app.py
+      - FLASK_ENV=development  # Enables debugger and auto-reload
+    
+
