--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,11 +6,9 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Add Flask CLI to PATH (optional if using python -m flask)
-ENV PATH="/root/.local/bin:$PATH"
-
 COPY . .
 
 EXPOSE 5000
 
-CMD ["python", "-m", "flask", "run", "--host=0.0.0.0", "--port=5000"]
+CMD ["gunicorn", "-b", "0.0.0.0:5000", "app:app"]
+
