--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,12 @@ services:
       - ./backend:/app
     environment:
       - FLASK_APP=app.py
-      - FLASK_ENV=development  # Enables debugger and auto-reload
+      - FLASK_ENV=development
+
+  frontend:
+    build: ./frontend
+    ports:
+      - "3000:80"
+
 
 
