--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,36 @@
 .env
 docker-compose.override.yml
+
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+
+# Flask
+instance/
+.env
+*.env
+
+# Node
+node_modules/
+frontend/node_modules/
+frontend/dist/
+
+# Logs
+*.log
+
+# Docker
+docker-compose.override.yml
+*.pid
+
+# macOS
+.DS_Store
+
+# IDEs
+.idea/
+.vscode/
+
+# System files
+Thumbs.db
+ehthumbs.db
