--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     environment:
       - FLASK_APP=app.py
       - FLASK_ENV=development
+    env_file:
+      - .env
     restart: unless-stopped
 
   frontend:
