--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   backend:
     container_name: cpp-backend
@@ -15,9 +17,17 @@ services:
 
   frontend:
     container_name: cpp-frontend
-    build: ./frontend
+    build:
+      context: ./frontend
+      target: builder  # build dev mode
     ports:
-      - "3000:80"
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - VITE_API_BASE=http://localhost:5003
+    command: npm run dev
     depends_on:
       - backend
     restart: unless-stopped
