--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,19 +15,19 @@ services:
       - .env
     restart: unless-stopped
 
-  frontend:
-    container_name: cpp-frontend
-    build:
-      context: ./frontend
-      target: builder  # build dev mode
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    environment:
-      - VITE_API_BASE=http://localhost:5003
-    command: npm run dev
-    depends_on:
-      - backend
-    restart: unless-stopped
+    frontend:
+      container_name: cpp-frontend
+      build:
+        context: ./frontend
+        dockerfile: Dockerfile.dev  # 👈 local-only Dockerfile
+      ports:
+        - "3000:3000"
+      volumes:
+        - ./frontend:/app
+        - /app/node_modules
+      environment:
+        - VITE_API_BASE=http://localhost:5003
+      depends_on:
+        - backend
+      restart: unless-stopped
+
