--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,10 @@ services:
     environment:
       - FLASK_APP=app.py
       - FLASK_ENV=development
+      - PYTHONPATH=/app
     env_file:
-      - .env
+      - backend/.env
+    command: flask run --host=0.0.0.0 --port=5000
     restart: unless-stopped
 
   frontend:
@@ -25,8 +27,10 @@ services:
     volumes:
         - ./frontend:/app
         - /app/node_modules
+    env_file:
+        - ./frontend/.env
     environment:
-        - VITE_API_BASE=http://localhost:5003
+        - VITE_API_BASE=http://backend:5003
     depends_on:
         - backend
     restart: unless-stopped
