--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - FLASK_APP=app.py
       - FLASK_ENV=development
       - PYTHONPATH=/app
+      - APP_CONFIG_FILE=/app/config.py
     env_file:
       - backend/.env
     command: flask run --host=0.0.0.0 --port=5000
