--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.6",
+    "@nivo/core": "^0.88.0",
+    "@nivo/line": "^0.88.0",
     "framer-motion": "^12.7.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
