update dockerfile frontend

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 ENV VITE_API_BASE=https://cpp-hackathon-2025-production.up.railway.app
 
 COPY . .
-RUN npm install && npm run build
+RUN npm install --legacy-peer-deps && npm run build
 
 # Stage 2: Serve with nginx
 FROM nginx:alpine
